- Fixed: Hopper item config in hoppers.yml