@@ -20,6 +20,7 @@ hoppers:
         {owner}[newline]  &7Transfer amount:&a {transfer} &7items[newline]  &7Suction
         radius:&a {suction}[newline]  &7Links:&a {links} &7links[newline]  &7Max distance:&a
         {distance} &7blocks'
+      material: HOPPER
     cost: 1500.0
     # Set the hopper transfer and suction tick time (20 ticks are one second)
     # You should only change this, if you know what you do.
@@ -117,6 +118,14 @@ hoppers:
     type: 'CHUNK'
     name: '&9&lChunk Hopper'
     cost: 5000.0
+    item:
+      name: '&9&lUpgradeable Hopper'
+      lore: '&7With this item you[newline]&7can create a better[newline]&7hopper by
+        placing[newline]&7it somewhere.[newline][newline]&8> &7Stats[newline]  &7Owner:&2
+        {owner}[newline]  &7Transfer amount:&a {transfer} &7items[newline]  &7Suction
+        radius:&a {suction}[newline]  &7Links:&a {links} &7links[newline]  &7Max distance:&a
+        {distance} &7blocks'
+      material: HOPPER
     # Set the hopper transfer and suction tick time (20 ticks are one second)
     # You should only change this, if you know what you do.
     ticks:
