@@ -1,1 +1,3 @@
-- Fixed: Hopper item config in hoppers.yml
+- Fixed: Bedrock client error
+- Fixed: API delete param for addItem method
+- Fixed: Error with particle on 1.20.x
